2005-07-12  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* package.C (get_default_user_support_dir): for windows and osx
	packaging, use "LyX" instead of "lyx" as subdirectory name.

2005-07-14  Angus Leeming  <leeming@lyx.org>

	* filetools.[Ch] (mangled_filename): backport the 1.4.x name mangling
	stuff and then extend it so that the mangled file name is never more
	than 160 chars long. Do this because MiKTeX's YAP (version 2.4.1803)
	will crash if the string referencing the file name in  the .dvi file
	is "too long". MikTeX bug:
	http://sourceforge.net/tracker/index.php?func=detail&aid=1238065&group_id=10783&atid=110783

2005-07-05  Angus Leeming  <leeming@lyx.org>

	* filetools.C (latex_path): don't pass the \string"-protected
	file name through ChangeExtension as it breaks the latex code
	on Windows.

2005-07-04  Georg Baum  <Georg.Baum@post.rwth-aachen.de>

	* filetools.[Ch] (latex_path): add exclude_extension argument

2005-06-21  Georg Baum  <Georg.Baum@post.rwth-aachen.de>

	* filetools.C (latex_path): protect " with \string since it may be
	active

2005-04-29  Angus Leeming  <leeming@lyx.org>

	* os_win32.C (init): check that GetConsoleTitle succeeded.

2005-04-22  Angus Leeming  <leeming@lyx.org>

	* package.C (get_binary_path): on prompting from Rob Bearman,
	ensure that the name of the executable, as input at the command
	line has a ".exe" suffix so that various file interogations
	work on Windows.

2005-04-21  Angus Leeming  <leeming@lyx.org>

	* forkedcontr.C: add #include <csignal>.

2005-04-19  Angus Leeming  <leeming@lyx.org>

	* forkedcall.C: protect system-specific headers with preprocessor
	guards.
	(running): don't call waitpid() on Windows.
	(waitForChild): add Windows-specific code to wait for a child process
	to finish.
	(generateChild): add Windows-specific code to spawn the child in the
	first place.

	* forkedcontr.[Ch]: remove cruft from the days of the dialog to kill
	child processes. Class no longer derives from trackable, no longer