@@ -1324,7 +1324,7 @@ string const MakeDisplayPath(string const & path, unsigned int threshold)
 	string const home(lyx::package().home_dir());
 
 	// replace /home/blah with ~/
-	if (prefixIs(str, home))
+	if (!home.empty() && prefixIs(str, home))
 		str = subst(str, home, "~");
 
 	if (str.length() <= threshold)
